--- a/domburi/static/recipes/recipes.css
+++ b/domburi/static/recipes/recipes.css
@@ -12,6 +12,13 @@ header {
   background-color: #90C3BC;
 }
 
+footer {
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #A1D7E2;
+}
 
 .user_decor {
     color: #2A3DB2;
@@ -112,3 +119,5 @@ a {
   padding: 25px 0 25px;
   background: linear-gradient(#C1C1C1, #F9F9F9)
 }
+
+
